--- a/templates/addfooditem.html
+++ b/templates/addfooditem.html
@@ -10,4 +10,149 @@
         </div>
     </div>
 
+    <div class="row">
+            <form action="{{ url_for('insert_food_item') }}" method="POST" class="col s12">
+                <!-- <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">poll</i>
+                        <select id="category" name="category_name">
+                            <option value="" disabled selected>Choose a category</option>
+                            {#% for cat in categories %#}
+                                <option value="{#{ cat.category_name }#}">{#{ cat.category_name }#}</option>
+                            {#% endfor %#}
+                            <!--<option value="2">Option 2</option>-->
+                            <!--<option value="3">Option 3</option>-->
+                        <!-- </select>
+                        <label>Task Category</label>
+                    </div>
+                </div> -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_name" name="name" type="text" class="validate">
+                        <label for="food_name">Food Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_brand" name="brand" type="text" class="validate">
+                        <label for="food_brand">Food Brand</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_energy1" name="energy1" type="text" class="validate">
+                        <label for="food_energy1">Food Energy (kJ)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_energy2" name="energy2" type="text" class="validate">
+                        <label for="food_energy2">Food Energy (kcal)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_fat" name="fat" type="text" class="validate">
+                        <label for="food_fat">Fat (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_saturated" name="saturated" type="text" class="validate">
+                        <label for="food_saturated">Saturated Fat (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_carbohydrates" name="carbohydrates" type="text" class="validate">
+                        <label for="food_carbohydrates">Carbohydrates (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_sugar" name="sugar" type="text" class="validate">
+                        <label for="food_sugar">Sugar (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_fibre" name="fibre" type="text" class="validate">
+                        <label for="food_fibre">Fibre (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_protein" name="protein" type="text" class="validate">
+                        <label for="food_protein">Protein (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="food_salt" name="salt" type="text" class="validate">
+                        <label for="food_salt">Salt (g)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="classification" name="classification" type="text" class="validate">
+                        <label for="classification">Classification</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="shop" name="shop" type="text" class="validate">
+                        <label for="shop">Shop item bought</label>
+                    </div>
+                </div>
+
+
+
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">subject</i>
+                        <textarea name="notes" id="notes" class="materialize-textarea"></textarea>
+                        <label for="notes">Any Comments</label>
+                    </div>
+                </div>
+                <!-- <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">today</i>
+                        <input id="due_date" name="due_date" type="text" class="datepicker">
+                        <label for="due_date">Due Date</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="switch">
+                        <label>
+                            <input id="is_urgent" name="is_urgent" type="checkbox">
+                            <span class="lever"></span>
+                            Is Urgent
+                        </label>
+                    </div>
+                </div> -->
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Add Food Item
+                        <i class="material-icons right">playlist_add</i>
+                    </button>
+                    <a href="{{ url_for('get_food_items') }}" class="btn waves-effect waves-light grey">
+                        <i class="material-icons right">cancel</i>Cancel
+                    </a>
+                </div>
+            </form>
+        </div>
+
 {% endblock %}
