--- a/templates/base.html
+++ b/templates/base.html
@@ -5,22 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
             rel="stylesheet" 
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
             crossorigin="anonymous" />
-    <link rel="stylesheet" href="./static/css/style.css" />
+    <!-- <link rel="stylesheet" href="./static/css/style.css" /> -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
 <body>
     
     <div class="container">
-        <div class="row header">
-                <h1>Nutrition Value App</h1>
-                <p>Nutrition value per 100g (100ml) for various food items.</p>
-        </div>
-        <hr>
+        <header class="row header">
+            <h1>Nutrition Value App</h1>
+            <p>Nutrition value per 100g (100ml) for various food items.</p>
+            <hr>
+            <nav>
+                <div class="nav-wrapper">
+                    <a href="{{ url_for('get_food_items') }}" class="brand-logo">Task Manager</a>
+                    <!--<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>-->
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="{{ url_for('get_food_items') }}">Home</a></li>
+                        <li><a href="{{ url_for('add_food_item') }}">New Task</a></li>
+                        <!-- <li><a href="{#{ url_for('get_categories') }#}">Categories</a></li>
+                        <li><a href="{#{ url_for('add_category') }#}">Add Category</a></li> -->
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li><a href="{{ url_for('get_food_items') }}">Home</a></li>
+                        <li><a href="{{ url_for('add_food_item') }}">New Task</a></li>
+                        <!-- <li><a href="{#{ url_for('get_categories') }#}">Categories</a></li>
+                        <li><a href="{#{ url_for('add_category') }#}">Add Category</a></li> -->
+                    </ul>
+                </div>
+            </nav>
+            <hr>
+        </header>
+        
+
         {% block content %}
         {% endblock %}
     </div>
@@ -34,7 +59,15 @@
         src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.collapsible').collapsible();
+            $('select').material_select();
+            $('.button-collapse').sideNav();
+        });
+    </script>
     <script>
         
         function flipBox(front, back){
