--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,7 +152,7 @@ a.button-collapse i:hover {
     justify-content: center;
 }
 
-.btnEdit {
+.btnEdit, .btnAdd {
     color: #212529;
     font-size: 1.2em;
     background-color: #7cc;
@@ -261,4 +261,50 @@ a.button-collapse i:hover {
     border-radius: 15px;
     padding: 3px 10px;
     background-color: #fec;
+}
+
+.classes {
+    position: relative;
+    max-height: 100vh;
+    width: 90%;
+    margin: auto;
+    padding: 5px;
+    border: 1px solid #c9dcff;
+    background-color: #ecfdb7;
+    font-size: 1.5em;
+    box-shadow: 0px 0px 5px #c9dcff;
+}
+
+.classes>ul>li {
+    border-bottom: 1px solid #e8d4d4;
+    border-radius: 30px/3px;
+    font-size: 0.7em;
+}
+
+.classList {
+    color: red;
+    text-shadow: -2px 0px 3px #0b136f;
+    font-size: 0.7em;
+    margin: 0 5px;
+    
+}
+
+.delClass {
+    position: absolute;
+    right: 5px;
+}
+
+/* .delClass a {
+    font-size: 0.5em;
+} */
+
+@media screen and (min-width: 600px) {
+    /* .delClass a {
+        font-size: 0.7em;
+    } */
+    .classes>ul>li {
+        border-bottom: 1px solid #e8d4d4;
+        border-radius: 30px/3px;
+        font-size: 1em;
+    }
 }
