--- a/templates/classification.html
+++ b/templates/classification.html
@@ -23,7 +23,9 @@
                                         <a href="#">
                                         <i class="material-icons prefix classList">create</i>Edit </a> | 
                                         <a href="#">
-                                        <i class="material-icons prefix classList">clear</i>Delete </a>
+                                        <i class="material-icons prefix classList">clear</i>
+                                        <a href="{{ url_for('delete_class', class_id=class._id) }}" >Delete </a>
+                                        <!-- <a href="{{ url_for('delete_class', class_id=class._id) }}"class="waves-effect waves-light btn btn_small"></a>Delete </a> -->
                                     </span>
                                 </li>
                         {% endfor %}
