--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,8 @@
                                     <div class="card-button">
                                         <div class="btnGroup1">
                                             <button class="btnEdit onclick=""><strong>Edit</strong></button>
-                                            <button class="btnDelete" onclick=""><strong>Delete</strong></button>
+                                            <a href="{{ url_for('delete_food_item', food_item_id=foodItem._id) }}" >
+                                            <button class="btnDelete" onclick=""><strong>Delete</strong></button></a>
                                         </div>
                                         <div class="btnGroup2">
                                             <button class="btnFlip" onclick="flipBox('box{{ loop.index }}_front', 'box{{ loop.index }}_back')"><strong>Back to Front</strong></button>
