--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,8 @@
                                     <p>This item was bought from {{ foodItem.shop }}.</p>
                                     <div class="card-button">
                                         <div class="btnGroup1">
-                                            <button class="btnEdit onclick=""><strong>Edit</strong></button>
+                                            <a href="{{ url_for('edit_food_item', food_item_id=foodItem._id) }}" >
+                                            <button class="btnEdit onclick=""><strong>Edit</strong></button></a>
                                             <a href="{{ url_for('delete_food_item', food_item_id=foodItem._id) }}" >
                                             <button class="btnDelete" onclick=""><strong>Delete</strong></button></a>
                                         </div>
