--- a/templates/editfooditem.html
+++ b/templates/editfooditem.html
@@ -62,14 +62,14 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">assignment</i>
-                        <input id="food_fat" name="fat" type="text" class="validate" value="{{ foodItem.brand }}">
+                        <input id="food_fat" name="fat" type="text" class="validate" value="{{ foodItem.fat }}">
                         <label for="food_fat">Fat (g)</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">assignment</i>
-                        <input id="food_saturated" name="saturated" type="text" class="validate" value="{{ foodItem.fat }}">
+                        <input id="food_saturated" name="saturated" type="text" class="validate" value="{{ foodItem.saturated }}">
                         <label for="food_saturated">Saturated Fat (g)</label>
                     </div>
                 </div>
