--- a/templates/editfooditem.html
+++ b/templates/editfooditem.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Add Food Item
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Update Food Item
                         <i class="material-icons right">playlist_add</i>
                     </button>
                     <a href="{{ url_for('get_food_items') }}" class="btn waves-effect waves-light grey">
