--- a/templates/addclass.html
+++ b/templates/addclass.html
@@ -39,8 +39,7 @@
             </div>
         </div>
 
-        <form action="{{ url_for('insert_class') }}" method="POST" class="col s12">
-
+        <form action="{{ url_for('insert_class', cameFrom=cameFrom) }}" method="POST" class="col s12">
 
             <div class="row">
                 <div class="input-field col s12">
