--- a/templates/addclass.html
+++ b/templates/addclass.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row"> <!-- Heading for Accordion -->
+    <div class="row"> 
         <div class="col-md-12">
             <div class="section-title text-center">
                 <h2>Add a Food Class</h2>
-                <span></span>
-                <!-- <p>The following is a list of food classifications in this data set.</p> -->
             </div>
         </div>
     </div>
